custom activities table red scheme

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -227,7 +227,6 @@ $buttonFontColor: #ECF0F1;
 		top: 0;
 		height: 15%;
 		width: 100%;
-		/*background-color: #2980B9;*/
 		background-color: $containerHeaderColor;
 	}
 
@@ -275,6 +274,7 @@ $buttonFontColor: #ECF0F1;
 			margin-top: 10px;
 		}
 
+		/*Blue button color scheme*/
 		.go-btn {
 				position: absolute;
 			    width: 100px;
