--- a/app/assets/stylesheets/custom_activities.scss
+++ b/app/assets/stylesheets/custom_activities.scss
@@ -2,6 +2,47 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 /*Custom Activity Module*/
+
+$redHot: #b51c1c;
+$redLite: #ebccd1;
+
+  .custActContainer {
+    width: 675px;
+    height: 400px;
+    position: relative;
+    margin: 0 auto;
+    border: 1px solid #f5f5f5;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px; 
+    border-bottom-right-radius: 2px;
+    border-bottom-left-radius: 2px;       
+
+    header {
+      height: 10%;
+      border-top-right-radius: 5px;
+      border-top-left-radius: 5px;
+      border-top: 4px solid $redHot;
+      border-bottom: 1px solid $redLite;
+      background-color: #f3f5f6;
+
+      h4 {
+        margin: 0;
+      }
+    }
+
+    section {
+
+    }
+
+    footer {
+      background-color: #f5f5f5;
+      border-bottom: 3px solid $redHot;
+      border-bottom-right-radius: 2px;
+      border-bottom-left-radius: 2px;
+      border-top: 1px solid $redLite;
+    }
+  }
+
   .customActivity {
     border: 1px solid #eee;
     width: 675px;
@@ -14,12 +55,10 @@
     text-align: center;  	
   }
 
-
   .customActivity header {
     margin: 0 auto;
     position: relative;
     top: 0;
-
   }
 
   .customActivity header h4 {
