custom activities table grid

--- a/app/assets/javascripts/backbone/templates/activities/customActivity.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/customActivity.jst.ejs
@@ -41,7 +41,7 @@
 
 	</header>
 	<section>
-		<table id="custActTable" class="table table-striped">
+		<table id="custActTable" class="table table-bordered table-hover">
 			<thead>
 				<tr>
 					<th>Title</th> <th>Content</th> <th>Time</th> <th>Delete</th>
