--- a/app/assets/stylesheets/custom_activities.scss
+++ b/app/assets/stylesheets/custom_activities.scss
@@ -11,6 +11,7 @@ $redLite: #ebccd1;
     height: 400px;
     position: relative;
     margin: 0 auto;
+    background-color: white;
     border: 1px solid #f5f5f5;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px; 
@@ -31,6 +32,18 @@ $redLite: #ebccd1;
     }
 
     section {
+      position: relative;
+      width: 100%;
+      height: 312px;
+
+      #custActTable {
+        position: absolute;
+        border-radius: 3px;
+        width: 90%;
+        margin: 0 auto;
+        /*top: 50%;*/
+        /*margin-top: -156px;*/
+      }
 
     }
 
@@ -40,6 +53,7 @@ $redLite: #ebccd1;
       border-bottom-right-radius: 2px;
       border-bottom-left-radius: 2px;
       border-top: 1px solid $redLite;
+      height: 12%;
     }
   }
 
