--- a/app/assets/javascripts/backbone/templates/activities/customActivity.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/customActivity.jst.ejs
@@ -36,29 +36,29 @@
 
 <div class="custActContainer">
 	<header> 
-
-		<h4 id='customActivityTitle'> Custom Activity List for <%= name%> </h4> 
-
+		<h3 id='customActivityTitle'> Custom Activity List for <%= name%> </h3> 
 	</header>
 	<section>
-		<table id="custActTable" class="table table-bordered table-hover">
-			<thead>
-				<tr>
-					<th>Title</th> <th>Content</th> <th>Time</th> <th>Delete</th>
-				</tr>
-			</thead>
-
-			<tbody>
-				<% _.each(data, function(custAct) { %> 
-					<tr class='activity <%= custAct.id %>'>
-						<td>  <%= custAct.title%> </td>
-						<td>  <%= custAct.content%> </td>
-						<td>  <%= custAct.time%> </td>
-						<td>  <button class='del-btn' id='<%= custAct.id %>'>Delete</button> </td>
+		<div class="tableContainer">
+			<table id="custActTable" class="table table-bordered table-hover">
+				<thead>
+					<tr>
+						<th>Title</th> <th>Content</th> <th>Time</th> <th>Delete</th>
 					</tr>
-					<% }); %>			
-			</tbody>
-		</table>
+				</thead>
+
+				<tbody>
+					<% _.each(data, function(custAct) { %> 
+						<tr class='activity <%= custAct.id %>'>
+							<td>  <%= custAct.title%> </td>
+							<td>  <%= custAct.content%> </td>
+							<td>  <%= custAct.time%> </td>
+							<td>  <button class='del-btn' id='<%= custAct.id %>'>Delete</button> </td>
+						</tr>
+						<% }); %>			
+				</tbody>
+			</table>
+		</div>
 	</section>
 	<footer> 
 		<a href='/tempo#createCustomActivity' id='add'> Create a 	Custom Activity </a>
