--- a/app/assets/stylesheets/custom_activities.scss
+++ b/app/assets/stylesheets/custom_activities.scss
@@ -5,12 +5,14 @@
 
 $redHot: #b51c1c;
 $redLite: #ebccd1;
+$dangerRed: #891515;
 
   .custActContainer {
     width: 675px;
     height: 400px;
     position: relative;
     margin: 0 auto;
+    margin-top: 100px;
     background-color: white;
     border: 1px solid #f5f5f5;
     border-top-right-radius: 5px;
@@ -25,9 +27,13 @@ $redLite: #ebccd1;
       border-top: 4px solid $redHot;
       border-bottom: 1px solid $redLite;
       background-color: #f3f5f6;
+      background-color: white;
 
-      h4 {
+      h3 {
         margin: 0;
+        margin-top: 5px;
+        text-align: center;
+        font-weight: bold;
       }
     }
 
@@ -35,16 +41,40 @@ $redLite: #ebccd1;
       position: relative;
       width: 100%;
       height: 312px;
+      overflow: scroll;
 
-      #custActTable {
-        position: absolute;
-        border-radius: 3px;
+      .tableContainer {
+        position: relative;
         width: 90%;
+        height: 90%;
         margin: 0 auto;
-        /*top: 50%;*/
-        /*margin-top: -156px;*/
-      }
+        margin-top: 15px;
+        overflow: scroll;
 
+        #custActTable {
+          position: relative;
+          border-radius: 3px;
+          margin: 0 auto;
+          width: 100%;
+          top: 7%;
+          /*overflow: scroll;*/
+          /*margin-top: -156px;*/
+
+          .del-btn {
+            color: white;
+            background-color: #e74c3c;
+            border: 1px solid #e74c3c;
+            border-radius: 55px;
+          }
+
+          .del-btn:hover {
+            cursor: pointer;
+            opacity: .8;
+          }        
+        }
+
+
+      }
     }
 
     footer {
@@ -53,122 +83,28 @@ $redLite: #ebccd1;
       border-bottom-right-radius: 2px;
       border-bottom-left-radius: 2px;
       border-top: 1px solid $redLite;
-      height: 12%;
+      height: 13%;
+
+      /*Red button color scheme*/
+      #add {
+          position: relative;
+          width: 150px;
+          height: 30px;
+          display: block;
+          margin: 0 auto;
+          margin-top: 9px;
+          box-shadow: .5px .5px .5px #888888;   
+          border: 1px solid $dangerRed;
+          border-radius: 5px; 
+          font-size: 16px;  
+          background-color: $dangerRed;
+          color: white;
+      }
+
+      #add:hover {
+          opacity: .8;  
+          cursor: pointer;
+          text-decoration: none;
+      }   
     }
   }
-
-  .customActivity {
-    border: 1px solid #eee;
-    width: 675px;
-    height: 400px;
-    position: relative;
-    margin: 0 auto;
-    background: rgb(250, 250, 250);
-    box-shadow: 1px 1px 1px #999;
-    border-radius: 2px;
-    text-align: center;  	
-  }
-
-  .customActivity header {
-    margin: 0 auto;
-    position: relative;
-    top: 0;
-  }
-
-  .customActivity header h4 {
-    margin: 0 auto;
-    text-align: center;
-    background-color: #D5DDE6;
-    width: 675px;
-    height: 45px;
-    border-radius: 2px;
-    position: relative;
-    border: 1px solid #eee;
-    padding-top: 20px;
-  }
-
-  .customActivityTable {
-    position: relative;
-    width: 100%;
-  }
-  .customActivityTable thead {
-    background-color: #2980B9;
-    color: white;
-    width: 100%;
-    padding: 0;
-
-  }
-
-  .customActivityTable th {
-    height: 30px;
-    padding: 3px;
-    background-color: #2980B9;
-
-  }
-
-  .customActivityTable tr {
-    width: 100%;
-  }
-
-  .customActivityTable td {
-    height: 30px;
-    border-top: 1px solid #eee;
-  }
-
-  .customActivity footer { 
-    position: absolute;
-    bottom: 0;
-    height: 15%;
-    width: 100%;
-    background-color: #F4F4F2;
-  }
-
-  .customActivity footer a {
-    position: relative;
-    top: 20px;
-    color: #9b59b6;
-    background-color: #F4F4F2;
-
-  }
-
-  .customActivity footer a:hover {
-    font-size: 100%;
-    text-decoration: underline;
-    color: #9b59b6;
-  }
-
-  .del-btn {
-    color: white;
-    background-color: #e74c3c;
-    border: 1px solid #e74c3c;
-    border-radius: 55px;
-  }
-
-  .del-btn:hover {
-    cursor: pointer;
-    opacity: .8;
-  }
-
-/*#add {*/
-  /*width: 250px;*/
-  /*height: 65px;  */
-/*  position: relative;
-  padding: 3px;
-  padding-right: 5px;
-  padding-left: 5px;
-  margin: 0 auto;
-  margin-top: 68px;
-  background-color: #27ae60 ;
-  border: 1px solid #27ae60 ;
-  border-radius: 3px;
-  color: white;
-*/
-/*}*/
-
-/*#add:hover {
-  opacity: .8;
-  cursor: pointer;
-  text-decoration: none; 
-}
-*/
-  
