--- a/app/assets/stylesheets/activities.scss
+++ b/app/assets/stylesheets/activities.scss
@@ -1,3 +1,79 @@
 // Place all the styles related to the activities controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+
+
+  /*Activity List styling ~~~~~~~~~~~~~~~*/
+  #activityTitle {
+    margin: 0 auto;
+    margin-top: 50px;
+    text-align: center;
+    background-color: #D5DDE6;
+    width: 675px;
+    height: 45px;
+    border-radius: 2px;
+    position: relative;
+    border: 1px solid #eee;
+  }
+
+  #activityTitle h4 {
+    margin: 0;
+    position: relative;
+    top: 12px;
+    color: #9b59b6;
+  }
+
+  .activityTable {
+    border: 1px solid #eee;
+    width: 675px;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    background: rgb(250, 250, 250);
+    box-shadow: 1px 1px 1px #999;
+    border-radius: 2px;
+    text-align: center;
+  }
+
+  .activityTable thead {
+    background-color: #2980B9;
+    color: white;
+    width: 100%;
+    padding: 0;
+  }
+
+  .activityTable th {
+    height: 30px;
+    padding: 3px;
+  }
+
+  .activityTable td {
+    height: 30px;
+    border-top: 1px solid #eee;
+  }
+
+  .activityTable a {
+    text-decoration: none;
+  }
+
+  .activityTable a:hover {
+    text-decoration: underline;
+    color: black;
+    opacity: .6;
+    font-size: 100%;
+    background-color: rgb(250, 250, 250);
+  }  
+
+  .activityTable #contentType {
+    color: #e67e22;
+  }
+
+  .activityTable #likeCount {
+    color: #16a085;
+  }
+
+  .activityTable #dislikeCount {
+    color: #c0392b;
+  }  
+
