--- a/app/assets/stylesheets/activities.scss
+++ b/app/assets/stylesheets/activities.scss
@@ -2,11 +2,231 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+$redHot: #b51c1c;
+$redLite: #ebccd1;
+$dangerRed: #891515;
+
+$greenBorder: #d6e9c6;
+$greenBackground: #3c763d;
+$greenText: rgb(104, 187, 108);
+
+.actContainer {
+    width: 675px;
+    height: 550px;
+    position: relative;
+    margin: 0 auto;
+    margin-top: 100px;
+    background-color: white;
+    border: 1px solid #f5f5f5;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px; 
+    border-bottom-right-radius: 2px;
+    border-bottom-left-radius: 2px;  
+
+    header {
+      height: 10%;
+      border-top-right-radius: 5px;
+      border-top-left-radius: 5px;
+      border-top: 4px solid $greenBackground;
+      border-bottom: 1px solid $greenBorder;
+      background-color: #f3f5f6;
+      background-color: white;
+
+      h3 {
+        margin: 0;
+        margin-top: 9px;
+        text-align: center;
+        font-weight: bold;
+        color: $greenText;
+      }
+    }
+
+  section {
+      position: relative;
+      width: 100%;
+      height: 75%;
+      overflow: scroll;
+
+      .tableContainer {
+        position: relative;
+        width: 95%;
+        height: 95%;
+        margin: 0 auto;
+        margin-top: 5px;
+        overflow: scroll;
+        /*border: 1px solid green;	*/
+
+        #actTable {
+          position: relative;
+          border-radius: 3px;
+          margin: 0 auto;
+          width: 100%;
+          top: 4%;
+
+          thead tr th {
+            font-size: 19px;
+            font-weight: bold;
+          }
+
+          tbody tr td {
+            font-family: 'Open Sans Condensed', sans-serif;
+            font-size: 16px;
+          }
+
+          tbody tr td a:hover {
+          	text-decoration: none;
+          	font-size: 16px;
+          	opacity: .7;
+          	background-color: transparent;
+          }
+
+		  #contentType {
+		    color: #e67e22;
+		  }
+
+		  #likeCount {
+		    color: #16a085;
+		  }
+
+		  #dislikeCount {
+		    color: #c0392b;
+		  }            
+
+          .del-btn {
+            color: white;
+            background-color: #e74c3c;
+            border: 1px solid #e74c3c;
+            border-radius: 55px;
+          }
+
+          .del-btn:hover {
+            cursor: pointer;
+            opacity: .8;
+          }        
+        }
+      }
+    }
+
+    footer {
+      background-color: #f5f5f5;
+      border-bottom: 3px solid $greenBackground;
+      border-bottom-right-radius: 2px;
+      border-bottom-left-radius: 2px;
+      border-top: 1px solid $greenBorder;
+      height: 11%;
+
+
+      /*Red button color scheme*/
+      #activityBtn {
+          position: relative;
+          width: 150px;
+          height: 30px;
+          display: block;
+          margin: 0 auto;
+          margin-top: 9px;
+          box-shadow: .5px .5px .5px #888888;   
+          border: 1px solid $dangerRed;
+          border-radius: 5px; 
+          font-size: 16px;  
+          background-color: $dangerRed;
+          color: white;
+      }
+
+      #activityBtn:hover {
+          opacity: .8;  
+          cursor: pointer;
+          text-decoration: none;
+      } 
+
+
+
+  }
+}
+
+/*
+    section {
+      position: relative;
+      width: 100%;
+      height: 312px;
+      overflow: scroll;
+
+      .tableContainer {
+        position: relative;
+        width: 90%;
+        height: 90%;
+        margin: 0 auto;
+        margin-top: 15px;
+        overflow: scroll;
+
+        #custActTable {
+          position: relative;
+          border-radius: 3px;
+          margin: 0 auto;
+          width: 100%;
+          top: 7%;
+
+          thead tr th {
+            font-size: 19px;
+            font-weight: bold;
+          }
+
+          tbody tr td {
+            font-family: 'Open Sans Condensed', sans-serif;
+            font-size: 16px;
+          }
+
+          .del-btn {
+            color: white;
+            background-color: #e74c3c;
+            border: 1px solid #e74c3c;
+            border-radius: 55px;
+          }
+
+          .del-btn:hover {
+            cursor: pointer;
+            opacity: .8;
+          }        
+        }
+      }
+    }
+
+    footer {
+      background-color: #f5f5f5;
+      border-bottom: 3px solid $redHot;
+      border-bottom-right-radius: 2px;
+      border-bottom-left-radius: 2px;
+      border-top: 1px solid $redLite;
+      height: 13%;
+*/
+      /*Red button color scheme*/
+/*      #add {
+          position: relative;
+          width: 150px;
+          height: 30px;
+          display: block;
+          margin: 0 auto;
+          margin-top: 9px;
+          box-shadow: .5px .5px .5px #888888;   
+          border: 1px solid $dangerRed;
+          border-radius: 5px; 
+          font-size: 16px;  
+          background-color: $dangerRed;
+          color: white;
+      }
+
+      #add:hover {
+          opacity: .8;  
+          cursor: pointer;
+          text-decoration: none;
+      }   
+    }
+  }*/
+
 
 
 
   /*Activity List styling ~~~~~~~~~~~~~~~*/
-  #activityTitle {
+/*  #activityTitle {
     margin: 0 auto;
     margin-top: 50px;
     text-align: center;
@@ -76,4 +296,4 @@
   .activityTable #dislikeCount {
     color: #c0392b;
   }  
-
+*/
