--- a/app/assets/stylesheets/custom_activities.scss
+++ b/app/assets/stylesheets/custom_activities.scss
@@ -34,6 +34,7 @@ $dangerRed: #891515;
         margin-top: 5px;
         text-align: center;
         font-weight: bold;
+        color: #c7254e;
       }
     }
 
