--- a/app/assets/javascripts/backbone/templates/activities/home.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/home.jst.ejs
@@ -1,6 +1,6 @@
 <!-- Temporary styling -->
 
-<div class="home-wrapper">
+<div class="home-wrapper animated bounceIn">
 	<header>
 		<h3> Welcome Home <%= name %></h3>
 	</header>
