--- a/app/assets/javascripts/backbone/templates/activities/customActivity.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/customActivity.jst.ejs
@@ -34,7 +34,7 @@
 
 
 
-<div class="custActContainer">
+<div class="custActContainer animated pulse">
 	<header> 
 		<h3 id='customActivityTitle'> Custom Activity List for <%= name%> </h3> 
 	</header>
