--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,131 @@
-// Place all the styles related to the Users controller here.
+/*// Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+*/ /*Login */
+
+
+  .loginHead {
+    width: 100%;
+    height: 150px;
+    margin-top: -13px;
+    background-image: radial-gradient(50% 50%, #3695e7, #166ebb);
+  	padding: 30px;
+
+  	h1 {
+  		text-align: center;
+  		color: white;
+  	}
+
+  }
+
+
+  .loginContainer {
+
+	  #login-form {
+	    width: 350px;
+	    height: 315px;
+	    border: 1px solid #dedede;
+	    border-radius: 3px;
+	    background-color: white;
+	    box-shadow: .5px .5px .5px #888888;
+	    margin: 0 auto;
+	    text-align: center;
+	    padding-top: 20px;
+	    padding-bottom: 20px;
+	    font-size: 15px;
+	    margin-top: 30px;
+	    position: relative;
+	  }
+
+	  #login-form header {
+	    position: absolute;
+	    top: 0;
+	    width: 100%;
+	    height: 13%;
+	    border-bottom: 1px solid #DDD;
+	    background: #F4F4F2;
+	    border-top: 2px solid #166ebb;
+	  }
+
+	  /*border-color: #166ebb #166ebb #0e4677;*/
+
+	  #login-form header h3 {
+	    margin-top: 6px;
+	    font-weight: italic;
+	  }
+
+	  input {
+	    width: 300px;
+	    height: 30px;
+	    margin-bottom: 15px;
+	    margin-top: 10px;
+	  }
+
+	  input:hover {
+	    background-color: #E4F1FE;
+	    border: 1px solid #DDD;
+	  }
+
+	  label {
+	    margin-bottom: 10px;
+	  }
+
+	  fieldset {
+	    border: none;
+	    position: relative;
+	    top: 25px;
+	  }
+
+	  #warning {
+	  color: red;
+	  text-align: center;
+	  }
+
+	  button {
+	    width: 300px;
+	    height: 35px;
+	    display: block;
+	    position: relative;
+	    top: -90px;
+	    margin: 0 auto;
+	    margin-bottom: 15px;
+	    /*background-color: #66CC99;*/
+	    background-color: #1f89e5; 
+	    /*border: 1px solid #D35C48;*/
+	    border-color: #1f89e5 #1f89e5 #1361a4;
+	    border-radius: 5px;
+	    color: white;
+	    font-size: 15px;
+
+	  }
+
+	  button:hover {
+	    opacity: .8;
+	    cursor: pointer;
+	  }
+
+	  .create {
+	    width: 315px;
+	    height: 35px;
+	    display: block;
+	    position: relative;
+	    top: -90px;
+	    margin: 0 auto;
+	    text-align: center;
+	    color: #1f89e5;
+
+	  }
+
+	  .create:hover {
+	    opacity: .6;
+	    cursor: pointer;
+	  }
+
+
+
+
+
+  }
+
+
+
