--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -3,6 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 */ /*Login */
 
+$signupFontColor: #c07130;
 
   .loginHead {
     width: 100%;
@@ -48,7 +49,6 @@
 	  }
 
 	  /*border-color: #166ebb #166ebb #0e4677;*/
-
 	  #login-form header h3 {
 	    margin-top: 6px;
 	    font-weight: italic;
@@ -120,12 +120,101 @@
 	    opacity: .6;
 	    cursor: pointer;
 	  }
-
-
-
-
-
   }
 
+
+
+
+
+  /*Signup Styling*/
+
+
+  .signupHead {
+    width: 100%;
+    height: 150px;
+    margin-top: -13px;
+	background-color: rgb(240, 108, 0);
+	background-image: radial-gradient(50% 50%, rgb(255, 120, 10), rgb(189, 85, 0));
+  	padding: 30px;
+
+  	h1 {
+  		text-align: center;
+  		color: white;
+  	}
+  }
+
+  .signupContainer {
+
+	    #signup-form {
+	    width: 350px;
+	    height: 375px;
+	    border: 1px solid #dedede;
+	    border-radius: 3px;
+	    background-color: white;
+	    box-shadow: .5px .5px .5px #888888;
+	    margin: 0 auto;
+	    text-align: center;
+	    padding-top: 30px;
+	    padding-bottom: 20px;
+	    margin-top: 30px;
+	    position: relative;
+	  }
+
+	 #signup-form header {
+	    position: absolute;
+	    top: 0;
+	    width: 100%;
+	    height: 35px;
+	    border-bottom: 1px solid #DDD;
+	    background: #F4F4F2;
+	  }  
+
+	  #signup-form header h3 {
+	    margin-top: 8px;
+	    font-weight: normal;
+	  }
+
+	  #signup-form input {
+	    width: 300px;
+	    height: 20px;
+	    margin-bottom: 15px;
+	  }
+
+	  #signup-form input:hover {
+	    background-color: #E4F1FE;
+	    border: 1px solid #DDD;
+	  }  
+
+	  #signup-form label {
+	    margin-bottom: 5px;
+	  }
+
+	  #signup-form fieldset {
+	    border: none;
+	  } 
+
+	  #signup-form button {
+	    width: 300px;
+	    height: 35px;
+	    display: block;
+	    margin: 0 auto;
+	    margin-bottom: 15px;
+	    background-color: #D35C48;
+	    border: 1px solid #D35C48;
+	    border-radius: 3px;
+	    color: #EEEEEE;
+
+	  }
+
+	  #signup-form button:hover {
+	    opacity: .8;
+	    cursor: pointer;
+	  }
+
+	  #signup {
+	    margin: 0 auto;
+	  }
+
+}
 
 
