user signup orange

--- a/app/assets/javascripts/backbone/templates/unauthenticated/signup.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/unauthenticated/signup.jst.ejs
@@ -4,7 +4,7 @@
   <h1> User Signup </h1>
 </div>
 
-<div class="signupContainer">
+<div class="signupContainer animated fadeIn">
   <div id="signup-form">
   <form  class="form-horizontal">
     <header> <h3> Register </h3></header>
