error messages displaying on change password

--- a/app/assets/javascripts/backbone/templates/activities/settings.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/settings.jst.ejs
@@ -8,11 +8,13 @@
 		    <section>
 			    <form>
 			      <p> Old Password </p>
-			      <input type="change-password" name="change-password" id="password-change">
+			      <input type="password" name="change-password" id="old-password">
 			      <p> New Password </p>
-			      <input type="change-password" name="change-password" id="password-change">
+			      <input type="password" name="change-password" id="new-password">
+			      <p id="new-password-error" class="password-error"> </p>
 			      <p> Confirm Password </p>
-			      <input type="change-password" name="change-password" id="password-change">
+			      <input type="password" name="change-password" id="new-password-confirmation">
+			      <p id="new-password-confirmation-error" class="password-error"> </p>
 			    </form>
 			     <button class="change-submit"> Change password </button>
 		    </section> 
