password change works, no validation yet

--- a/app/assets/javascripts/backbone/templates/activities/settings.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/settings.jst.ejs
@@ -11,12 +11,12 @@
 			      <input type="password" name="change-password" id="old-password">
 			      <p> New Password </p>
 			      <input type="password" name="change-password" id="new-password">
-			      <p id="new-password-error" class="password-error"> </p>
+			      <p id="new-password-error" class="password-error"> Your password must be at least 8 characters</p>
 			      <p> Confirm Password </p>
 			      <input type="password" name="change-password" id="new-password-confirmation">
-			      <p id="new-password-confirmation-error" class="password-error"> </p>
+			      <p id="new-password-confirmation-error" class="password-error">passwords do not match</p>
 			    </form>
-			     <button class="change-submit"> Change password </button>
+			     <button id="change-password" class="change-submit"> Change password </button>
 		    </section> 
 		    <br>
 		</div>	
