back link points to history or activities

--- a/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
@@ -125,6 +125,6 @@
 
 	<footer>
 		<a id="link" href='<%= link %>' target="_blank"> Link </a>
-		<a href='tempo#activities'> Back </a>
+		<a href='tempo#<%= backLink %>'> Back </a>
 	</footer>
 </div>
