--- a/app/views/tempo/index.html.erb
+++ b/app/views/tempo/index.html.erb
@@ -10,6 +10,8 @@
     <div class="nav-bar-divider"> </div>
     <li><a href="/tempo#customActivities"> Custom Activities</a></li>
     <div class="nav-bar-divider"> </div>
+    <li><a href="/tempo#history">History</a></li>
+    <div class="nav-bar-divider"> </div>
     <li><a href="/tempo#settings"> Settings</a></li>
         <div class="nav-bar-divider"> </div>
     <div id="logout-button">
