--- a/app/assets/javascripts/backbone/templates/activities/history.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/history.jst.ejs
@@ -15,7 +15,7 @@
 		<tbody>
 		<% _.each(data, function(custAct) { %> 
 			<tr class='history <%= custAct.id %>'>
-				<td> <a href='/tempo#activities/<%= custAct.id%>'> <%= custAct.title%> </a></td>
+				<td> <a href='/tempo#activities/<%= custAct.id%>?history=true'> <%= custAct.title%> </a></td>
 				<td>  <%= custAct.time%> </td>
 			</tr>
 			<% }); %>
