--- a/app/assets/stylesheets/custom_activities.scss
+++ b/app/assets/stylesheets/custom_activities.scss
@@ -86,6 +86,8 @@ $dangerRed: #891515;
 
     footer {
       background-color: #f5f5f5;
+      /*background-color: #e67e22;*/
+
       border-bottom: 3px solid $redHot;
       border-bottom-right-radius: 2px;
       border-bottom-left-radius: 2px;
