--- a/app/assets/stylesheets/settings.scss
+++ b/app/assets/stylesheets/settings.scss
@@ -1,5 +1,19 @@
 .page-header {
 	text-align: center;
+}
+
+.settingsHead {
+	width: 100%;
+    height: 120px;
+    margin-top: -13px;
+    background-image: radial-gradient(50% 50%, rgb(255, 120, 10), rgb(189, 85, 0));
+  	padding: 30px;
+
+  	h1 {
+  		text-align: center;
+  		color: white;
+  	}
+
 
 }
 
@@ -8,9 +22,39 @@
 	position: relative;
 	height: 700px;
 	width: 100%;
-	/*border: 1px solid green;*/
+	border: 1px solid green;
 	margin-top: 20px;
+	text-align: center;
+
+	#avatar {
+		width: 200px;
+		height: 200px;
+		border: 2px solid white;
+		border-radius: 50px;
+	}
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .settingsCol1 {
 	position: relative;
