--- a/app/assets/javascripts/backbone/templates/activities/history.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/history.jst.ejs
@@ -35,7 +35,7 @@
 		<tbody>
 		<% _.each(custData, function(custAct) { %> 
 			<tr class='history <%= custAct.id %>'>
-				<td>  <a href='/tempo#customActivities/<%= custAct.id%>?history=true'> <%= custAct.title%> </a></td>
+				<td>  <a href='/tempo#customActivity/<%= custAct.id%>?history=true'> <%= custAct.title%> </a></td>
 				<td>  <%= custAct.time%> </td>
 			</tr>
 			<% }); %>
