--- a/app/assets/javascripts/backbone/templates/activities/history.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/history.jst.ejs
@@ -1,24 +1,17 @@
 <!-- Temporary styling -->
 
-
+<div class="historyOuter">
 <div class="histContainer animated pulse">
 	<header> 
 		<h3 id='historyTitle'> History for <%= name%> </h3> 
 	</header>
 	<section>
 		<div class="tableContainer">
-			<table id="histTable" class="table table-bordered table-hover">
-				<thead>
-					<tr>
-						<th>Title</th> <th>Time</th>
-					</tr>
-				</thead>
-
+			<table id="histTable" class="table table-hover">
 				<tbody>
 					<% _.each(data, function(custAct) { %> 
 						<tr class='history <%= custAct.id %>'>
 							<td> <a href='/tempo#activities/<%= custAct.id%>?history=true'> <%= custAct.title%> </a></td>
-							<td>  <%= custAct.time%> </td>
 						</tr>
 						<% }); %>			
 				</tbody>
@@ -33,22 +26,16 @@
 	</header>
 	<section>
 		<div class="tableContainer">
-			<table id="customHistTable" class="table table-bordered table-hover">
-				<thead>
-					<tr>
-						<th>Title</th> <th>Time</th>
-					</tr>
-				</thead>
-
+			<table id="customHistTable" class="table table-hover">
 				<tbody>
 					<% _.each(custData, function(custAct) { %> 
 						<tr class='history <%= custAct.id %>'>
 							<td>  <a href='/tempo#customActivity/<%= custAct.id%>?history=true'> <%= custAct.title%> </a></td>
-							<td>  <%= custAct.time%> </td>
 						</tr>
 						<% }); %>			
 				</tbody>
 			</table>
 		</div>
 	</section>
+</div>
 </div>
