--- a/app/assets/stylesheets/history.scss
+++ b/app/assets/stylesheets/history.scss
@@ -11,17 +11,18 @@ $greenBackground: #3c763d;
 $greenText: rgb(104, 187, 108);
 
 .histContainer {
-    width: 675px;
+    width: 44%;
     height: 550px;
     position: relative;
-    margin: 0 auto;
-    margin-top: 100px;
+    margin-top: 50px;
     background-color: white;
     border: 1px solid #f5f5f5;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px; 
     border-bottom-right-radius: 2px;
     border-bottom-left-radius: 2px;  
+    float: left;
+    margin-left: 4%;
 
     header {
       height: 10%;
@@ -44,7 +45,7 @@ $greenText: rgb(104, 187, 108);
   section {
       position: relative;
       width: 100%;
-      height: 75%;
+      height: 90%;
       overflow: scroll;
 
       .tableContainer {
@@ -90,17 +91,18 @@ $greenText: rgb(104, 187, 108);
 }
 
 .custHistContainer {
-    width: 675px;
+    width: 44%;
     height: 550px;
     position: relative;
-    margin: 0 auto;
-    margin-top: 100px;
+    margin-top: 50px;
     background-color: white;
     border: 1px solid #f5f5f5;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px; 
     border-bottom-right-radius: 2px;
-    border-bottom-left-radius: 2px;  
+    border-bottom-left-radius: 2px;
+    float: left;
+    margin-left: 4%;
 
     header {
       height: 10%;
@@ -123,7 +125,7 @@ $greenText: rgb(104, 187, 108);
   section {
       position: relative;
       width: 100%;
-      height: 75%;
+      height: 90%;
       overflow: scroll;
 
       .tableContainer {
