--- a/app/assets/stylesheets/settings.scss
+++ b/app/assets/stylesheets/settings.scss
@@ -22,7 +22,6 @@
 	position: relative;
 	height: 700px;
 	width: 100%;
-	border: 1px solid green;
 	margin-top: 20px;
 	text-align: center;
 
@@ -32,29 +31,25 @@
 		border: 2px solid white;
 		border-radius: 50px;
 	}
+
+	.settingInterestsTable { 
+		border: 1px solid green;
+		width: 450px;
+		height: 400px;
+		max-height: 600px;
+		border: 1px solid #dedede;
+		border-radius: 3px;
+		background-color: white;
+		box-shadow: .5px .5px .5px #888888;
+		margin: 0 auto;
+		text-align: center;
+		position: relative;
+		float: left;
+		top: 20px;
+		margin-top: 50px;
+	}	
+
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 .settingsCol1 {
 	position: relative;
@@ -62,7 +57,6 @@
 	width: 49%;
 	height: 100%;
 	float: left;
-	/*border: 1px solid red;*/
 }
 
 .settingsCol2 {
@@ -78,12 +72,12 @@
 	text-align: center;
 	width: 450px;
 	height: 400px;
-	border: 1px solid #dedede ;
+	border: 1px solid #dedede;
 	border-radius: 3px;
 	background-color: white;
 	box-shadow: .5px .5px .5px #888888 ;
 	font-size: 15px;
-	margin-top: 50px;
+	margin-top: 10px;
 	position: relative; 
 	float: right;   
 	top: 20px;    
@@ -152,7 +146,6 @@ a:hover {
 	position: relative;
 	margin: 0 auto;
 	margin-top: 45px;
-	/*background-color: #66CC99 ;*/
 	background-color: #D35C48 ;
 	border: 1px solid #D35C48 ;
 	border-radius: 3px;
@@ -169,21 +162,30 @@ a:hover {
 /*Interests in settings page*/
 
 .settingInterests { 
-	border: 1px solid green;
+	/*border: 1px solid green;*/
 	width: 450px;
 	height: 400px;
-	max-height: 600px;
-	border: 1px solid #dedede;
 	border-radius: 3px;
-	background-color: white;
 	box-shadow: .5px .5px .5px #888888;
 	margin: 0 auto;
+	border: 1px solid #dedede;
+	background-color: white;
 	text-align: center;
 	position: relative;
-	float: left;
 	top: 20px;
-	margin-top: 50px;
+	margin-top: 10px;
+
+	.settinggTable {
+		width: 100%;
+		position: relative;
+	}
+
+	#interestCheck {
+		float: right;
+
+	}
 }
+
 
 .settingInterests header {
 	position: absolute;
@@ -241,7 +243,7 @@ font-size: 100%;
 	position: relative;
 	margin: 0 auto;
 	margin-bottom: 15px;
-	/*background-color: #66CC99;*/
+
 	background-color: #3498db;
 	border: 1px solid #3498db;
 	border-radius: 3px;
