fixed create custom activities form

--- a/app/assets/javascripts/backbone/templates/activities/createCustomActivity.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/createCustomActivity.jst.ejs
@@ -3,6 +3,8 @@
 
 <style>
 	#custom-activities-form {
+		position: relative;
+		top: 100px;		
 		width: 350px;
 		height: 350px;
 		border: 1px solid #dedede;
@@ -11,11 +13,66 @@
 		box-shadow: .5px .5px .5px #888888;
 		margin: 0 auto;
 		text-align: center;
-		padding-top: 30px;
+		/*padding-top: 30px;*/
 		padding-bottom: 20px;
+		border-top-left-radius: 7px;
+		border-top-right-radius: 7px;
 	}
 
-	#warning {
+	#custom-activities-form header {
+		height: 15%;
+		border-top: 3px solid rgb(31, 137, 229);
+		border-bottom: 1px solid rgb(40, 181, 246);
+		padding: 8px;
+	}
+
+	#custom-activities-form header h3 {
+		margin: 0;
+		color: rgb(40, 68, 92);
+	}	
+
+	#custom-activities-form section {
+		padding: 30px;
+		float: left;
+		width: 100%;
+	}
+
+	#custom-activities-form label {
+		float: left;
+		margin-bottom: 5px;
+		font-size: 16px;
+	}
+
+	#custom-activities-form input {
+		float: left;
+		margin-bottom: 5px;
+		width: 100%;
+		height: 30px;
+		border-radius: 5px;
+		border: 1px solid silver;
+	}
+
+
+	.submitCustomActivity {
+		width: 100%;
+	/*	background-image: linear-gradient(rgb(31, 137, 229) 0%, rgb(31, 137, 229) 100%);*/
+		border-radius: 25px;
+		margin-top: 20px;
+		position: relative;
+		bottom: 0;
+/*		height: 35px;
+	    background-color: #66CC99;
+	    border: 1px solid #2ABB9B;
+		border-radius: 3px;
+		margin-top: 10px;*/
+	}
+
+	.submitCustomActivity:hover {
+		opacity: .8;
+		cursor: pointer;
+	}	
+
+/*	#warning {
 	  color: red;
 	  text-align: center;
 	 }
@@ -43,17 +100,24 @@
 	.submitCustomActivity:hover {
 		opacity: .8;
 		cursor: pointer;
-	}
+	}*/
+
 </style>
 
 <form id="custom-activities-form" name="custom-activity"> 
-	<h3> Create New Custom Activity </h3>
-	<label for="title"> Title: </label> <br>
-	<input type="text" name"title" id="title" value=""> <br>
-	<label for="content"> Content: </label> <br>
-	<input type="text" name"content" id="content" value=""> <br>
-	<label for="completion_time"> Completion time: </label> <br>
-	<input type="text" name"completion_time" id="completion_time" value=""> <br>
-	<p id="warning"> </p> 
-	<button type="button" class="submitCustomActivity"> Submit </button> <br>
+	
+	<header id="head">
+		<h3> Create New Custom Activity  </h3>
+	</header>
+	<section> 
+		<label for="title"> Title: </label> <br> 
+		<input type="text" name"title" id="title" value=""> <br> 
+		<label for="content"> Content: </label> <br> 
+		<input type="text" name"content" id="content" value=""> <br> 
+		<label for="completion_time"> Completion time: </label> <br> 
+		<input type="text" name"completion_time" id="completion_time" value=""> 
+		<p id="warning"> </p> 
+		<br>
+		<button type="button" class="submitCustomActivity btn btn-primary"> Submit </button> 
+	</section> 
 </form>
