Added signup view error messages

--- a/app/assets/javascripts/backbone/templates/unauthenticated/signup.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/unauthenticated/signup.jst.ejs
@@ -32,12 +32,14 @@
         <label class="control-label" for="login_user_password">Password</label>
         <div class="controls">
           <input id="password" name="password" type="password" required="required" />
+          <p id="password-error" class="password-error"> Your password must be at least 8 characters</p>
         </div>
       </div>
       <div id="password_confirmation_group" class="control-group">
         <label class="control-label" for="login_user_password_confirmation">Confirm Password</label>
         <div class="controls">
           <input id="password_confirmation" name="password_confirmation" type="password" required="required" />
+          <p id="password-confirmation-error" class="password-error">Passwords do not match</p>
         </div>
       </div>
 
