--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -4,6 +4,8 @@
 */ /*Login */
 
 $signupFontColor: #c07130;
+$lightBlue: #7FA2C1;
+$darkBlue: #436786;
 $orangeBorder: #f06c00;
 $orangeButton: #e65000;
 
@@ -11,7 +13,7 @@ $orangeButton: #e65000;
     width: 100%;
     height: 150px;
     margin-top: -13px;
-    background-image: radial-gradient(50% 50%, #3695e7, #166ebb);
+    background-image: radial-gradient(50% 50%, $lightBlue, $darkBlue);
   	padding: 30px;
 
   	h1 {
@@ -46,10 +48,9 @@ $orangeButton: #e65000;
 	    height: 13%;
 	    border-bottom: 1px solid #DDD;
 	    background: #F4F4F2;
-	    border-top: 2px solid #166ebb;
+	    border-top: 2px solid $lightBlue;
 	  }
 
-	  /*border-color: #166ebb #166ebb #0e4677;*/
 	  #login-form header h3 {
 	    margin-top: 6px;
 	    font-weight: italic;
@@ -90,10 +91,8 @@ $orangeButton: #e65000;
 	    top: -90px;
 	    margin: 0 auto;
 	    margin-bottom: 15px;
-	    /*background-color: #66CC99;*/
-	    background-color: #1f89e5; 
-	    /*border: 1px solid #D35C48;*/
-	    border-color: #1f89e5 #1f89e5 #1361a4;
+	    background-color: $darkBlue; 
+	    border-color: $darkBlue $darkBlue #1361a4;
 	    border-radius: 5px;
 	    color: white;
 	    font-size: 15px;
@@ -113,7 +112,7 @@ $orangeButton: #e65000;
 	    top: -90px;
 	    margin: 0 auto;
 	    text-align: center;
-	    color: #1f89e5;
+	    color: $darkBlue;
 
 	  }
 
@@ -135,7 +134,8 @@ $orangeButton: #e65000;
     height: 150px;
     margin-top: -13px;
 	background-color: rgb(240, 108, 0);
-	background-image: radial-gradient(50% 50%, rgb(255, 120, 10), rgb(189, 85, 0));
+	/*background-image: radial-gradient(50% 50%, rgb(255, 120, 10), rgb(189, 85, 0));*/
+	background-image: radial-gradient(50% 50%, $lightBlue, $darkBlue);
   	padding: 30px;
 
   	h1 {
@@ -169,7 +169,7 @@ $orangeButton: #e65000;
 	    height: 35px;
 	    border-bottom: 1px solid #DDD;
 	    background: #F4F4F2;
-	    border-top: 2px solid $orangeBorder;
+	    border-top: 2px solid $lightBlue;
 	  }  
 
 	  #signup-form header h3 {
@@ -203,8 +203,8 @@ $orangeButton: #e65000;
 	    margin: 0 auto;
 	    margin-top: 3px;
 	    margin-bottom: 10px;
-	    background-color: $orangeButton;
-	    border: 1px solid $orangeBorder;
+	    background-color: $darkBlue;
+	    border: 1px solid $lightBlue;
 	    border-radius: 3px;
 	    color: #EEEEEE;
 	  }
