--- a/app/assets/stylesheets/settings.scss
+++ b/app/assets/stylesheets/settings.scss
@@ -8,13 +8,10 @@
     margin-top: -13px;
     background-image: radial-gradient(50% 50%, rgb(255, 120, 10), rgb(189, 85, 0));
   	padding: 30px;
-
   	h1 {
   		text-align: center;
   		color: white;
   	}
-
-
 }
 
 .settingsContainer {
@@ -68,46 +65,60 @@
 	/*border: 1px solid yellow;*/
 }	
 
+
+/*Old code ^*/
+
+
 .settingsModule {
-	text-align: center;
-	width: 450px;
-	height: 400px;
-	border: 1px solid #dedede;
-	border-radius: 3px;
-	background-color: white;
-	box-shadow: .5px .5px .5px #888888 ;
-	font-size: 15px;
-	margin-top: 10px;
-	position: relative; 
-	float: right;   
-	top: 20px;    
+    position: relative;
+    top: 100px;   
+    width: 350px;
+    height: 350px;
+    border: 1px solid #dedede;
+    border-radius: 3px;
+    background-color: white;
+    box-shadow: .5px .5px .5px #888888;
+    margin: 0 auto;
+    text-align: center;
+    padding-bottom: 20px;
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
 }
 
 .settingsModule header {
-	width: 100%;
-	height: 10%;
-	border-bottom: 1px solid #DDD;
-	background: #F4F4F2;
+    height: 15%;
+    border-top: 3px solid #b51c1c;
+    border-bottom: 1px solid #b51c1c;
+    padding: 8px;	
 }
 
 .settingsModule header h3 {
 	position: relative;
-	padding: 10px;
 	margin: 0;
 }
 
 .settingsModule section {
-	position: absolute;
-	top: 15%;
-	width: 100%;
-	height: 65%;
+    padding: 10px;
+    float: left;
+    width: 100%;	
 }
 
 .settingsModule section p {
 	font-family: 'Open Sans Condensed', sans-serif;
-	font-size: 15px;
-	margin: 0px;
+    float: left;
+    margin-bottom: 5px;
+    margin-top: 5px;
+    font-size: 16px;	
 }
+
+  .settingsModule input {
+    float: left;
+    margin-bottom: 10px;
+    width: 100%;
+    height: 30px;
+    border-radius: 5px;
+    border: 1px solid silver;
+  }
 
 .settingsModule footer {
 	position: absolute;
@@ -126,31 +137,17 @@ a:hover {
 	font-size: 110%;
 }
 
-
-.settingsModule input {
-	width: 295px;
-	height: 25px;
-	margin-bottom: 15px;
-	margin-top: 10px;
-}
-
 .settingsModule input:hover {
 	background-color: #E4F1FE ;
 	border: 1px solid #DDD;
 }
 
 .settingsModule button {
-	width: 300px;
-	height: 35px;
-	display: block;
-	position: relative;
-	margin: 0 auto;
-	margin-top: 45px;
-	background-color: #D35C48 ;
-	border: 1px solid #D35C48 ;
-	border-radius: 3px;
-	color: white;
-	font-size: 15px;
+    width: 100%;
+    border-radius: 25px;
+    margin-top: 20px;
+    position: relative;
+    bottom: 0;
 }
 
 .settingsModule button:hover {
@@ -160,47 +157,45 @@ a:hover {
 
 
 /*Interests in settings page*/
-
 .settingInterests { 
-	/*border: 1px solid green;*/
-	width: 450px;
-	height: 400px;
-	border-radius: 3px;
-	box-shadow: .5px .5px .5px #888888;
-	margin: 0 auto;
-	border: 1px solid #dedede;
-	background-color: white;
-	text-align: center;
-	position: relative;
-	top: 20px;
-	margin-top: 10px;
+    position: relative;
+    top: 100px;   
+    width: 350px;
+    height: 350px;
+    border: 1px solid #dedede;
+    border-radius: 3px;
+    background-color: white;
+    box-shadow: .5px .5px .5px #888888;
+    margin: 0 auto;
+    text-align: center;
+    padding-bottom: 20px;
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
 
-	.settinggTable {
+	.settingsTable {
 		width: 100%;
 		position: relative;
 	}
 
 	#interestCheck {
 		float: right;
-
 	}
 }
 
 
 .settingInterests header {
-	position: absolute;
-	top: 0;
-	width: 100%;
-	height: 10%;
-	border-bottom: 1px solid #DDD;
-	background: #F4F4F2;
+    height: 15%;
+    border-top: 3px solid rgb(31, 137, 229);
+    border-bottom: 1px solid rgb(40, 181, 246);
+    padding: 8px;	
 }
 
 .settingInterests header h3 {
 	position: relative;
-	padding: 10px;
+	padding: 5px;
 	margin: 0;
 	font-size: 20px;
+	color: rgb(40, 181, 246);
 }
 
 .settingInterests .settingInterestTable {
@@ -218,8 +213,8 @@ a:hover {
 }
 
 .settingInterests td {
-font-family: 'Open Sans Condensed', sans-serif;
-font-size: 100%;
+	font-family: 'Open Sans Condensed', sans-serif;
+	font-size: 100%;
 }
 
 .settingInterests td input {
@@ -234,24 +229,30 @@ font-size: 100%;
 .settingInterests footer {
 	margin-top: 20px;
 	background-color: white;
+	padding: 15px;
 }
 
-.settingInterests footer #submit-interests {
-	width: 300px;
+.settingInterests #submit-interests {
+/*	width: 300px;
 	height: 35px;
 	display: block;
 	position: relative;
 	margin: 0 auto;
 	margin-bottom: 15px;
-
 	background-color: #3498db;
 	border: 1px solid #3498db;
 	border-radius: 3px;
 	color: white;
-	font-size: 15px;
+	font-size: 15px;*/
+    width: 100%;
+    border-radius: 25px;
+    /*margin-top: 20px;*/
+    position: relative;
+    /*bottom: 0;	*/
+    bottom: 20px;
 }
 
-.settingInterests footer #submit-interests:hover {
+.settingInterests #submit-interests:hover {
 	opacity: .8;
 	cursor: pointer;
 }
@@ -265,5 +266,73 @@ font-size: 100%;
 }
 
 #old-password {
-	margin-bottom: 25px;
+	margin-bottom: 0px;
 }
+
+
+
+/*  
+    #custom-activities-form {
+    position: relative;
+    top: 100px;   
+    width: 350px;
+    height: 350px;
+    border: 1px solid #dedede;
+    border-radius: 3px;
+    background-color: white;
+    box-shadow: .5px .5px .5px #888888;
+    margin: 0 auto;
+    text-align: center;
+    padding-bottom: 20px;
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
+  }
+
+  #custom-activities-form header {
+    height: 15%;
+    border-top: 3px solid rgb(31, 137, 229);
+    border-bottom: 1px solid rgb(40, 181, 246);
+    padding: 8px;
+  }
+
+  #custom-activities-form header h3 {
+    margin: 0;
+    color: rgb(40, 68, 92);
+  } 
+
+  #custom-activities-form section {
+    padding: 30px;
+    float: left;
+    width: 100%;
+  }
+
+  #custom-activities-form label {
+    float: left;
+    margin-bottom: 5px;
+    font-size: 16px;
+  }
+
+  #custom-activities-form input {
+    float: left;
+    margin-bottom: 5px;
+    width: 100%;
+    height: 30px;
+    border-radius: 5px;
+    border: 1px solid silver;
+  }
+
+
+  .submitCustomActivity {
+    width: 100%;
+    border-radius: 25px;
+    margin-top: 20px;
+    position: relative;
+    bottom: 0;
+  }
+
+  .submitCustomActivity:hover {
+    opacity: .8;
+    cursor: pointer;
+  } 
+
+*/
