Fixed signup bug where you could signup without matching passwords

--- a/app/assets/javascripts/backbone/templates/unauthenticated/signup.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/unauthenticated/signup.jst.ejs
@@ -49,6 +49,8 @@
       <div class="form-actions">
         <button type="submit" id="signup" value="Sign up" class="btn btn-primary"> Sign Up </button>
       </div>
+
+      <div class="login"> Login instead </div>
   </div>
 
 </div>
