fixed settings page bugs

--- a/app/assets/javascripts/backbone/templates/activities/settings.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/settings.jst.ejs
@@ -65,13 +65,16 @@
 			      <input type="password" name="change-password" id="old-password">
 			      <p> New Password </p>
 			      <input type="password" name="change-password" id="new-password">
-			      <p> Confirm Password </p>
-		      	  <p id="new-password-error" class="password-error"> Your password must be at least 8 characters</p>			      
+		      	  <p id="new-password-error" class="password-error"> Your password must be at least 8 characters</p>				      
+			      <p> Confirm Password </p>		      
 			      <input type="password" name="change-password" id="new-password-confirmation">
 			      <p id="new-password-confirmation-error" class="password-error">passwords do not match</p>
 			    </form>
-			     <button id="change-password" class="change-submit btn btn-danger"> Change password </button>
+
 		    </section> 
+		    <footer> 
+			     <button id="change-password" class="change-submit btn btn-danger"> Change password </button>		    
+			 </footer>
 		    <br>
 		</div>	
 	</div>
