--- a/app/assets/stylesheets/settings.scss
+++ b/app/assets/stylesheets/settings.scss
@@ -73,7 +73,7 @@
     position: relative;
     top: 100px;   
     width: 350px;
-    height: 350px;
+    height: 375px;
     border: 1px solid #dedede;
     border-radius: 3px;
     background-color: white;
@@ -98,7 +98,7 @@
 }
 
 .settingsModule section {
-    padding: 10px;
+    padding: 20px;
     float: left;
     width: 100%;	
 }
@@ -124,8 +124,9 @@
 	position: absolute;
 	bottom: 0;
 	width: 100%;
-	height: 10%;
+	height: 13%;
 	background: white;
+
 }
 a {
 	text-decoration: none;
@@ -143,9 +144,9 @@ a:hover {
 }
 
 .settingsModule button {
-    width: 100%;
+    width: 90%;
     border-radius: 25px;
-    margin-top: 20px;
+    /*margin-top: -10px;*/
     position: relative;
     bottom: 0;
 }
@@ -161,7 +162,7 @@ a:hover {
     position: relative;
     top: 100px;   
     width: 350px;
-    height: 350px;
+    height: 375px;
     border: 1px solid #dedede;
     border-radius: 3px;
     background-color: white;
@@ -179,6 +180,14 @@ a:hover {
 
 	#interestCheck {
 		float: right;
+	}
+
+	footer {
+		position: absolute;
+		bottom: 0;
+		padding: 20px;
+		height: 15%;
+		width: 100%;
 	}
 }
 
@@ -249,7 +258,7 @@ a:hover {
     /*margin-top: 20px;*/
     position: relative;
     /*bottom: 0;	*/
-    bottom: 20px;
+    bottom: 7px;
 }
 
 .settingInterests #submit-interests:hover {
@@ -266,10 +275,15 @@ a:hover {
 }
 
 #old-password {
-	margin-bottom: 0px;
+	margin-bottom: 10px;
+}
+#new-password-error {
+	margin: 0;
 }
 
-
+#new-password {
+	margin: 0;
+}
 
 /*  
     #custom-activities-form {
