--- a/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
@@ -1,5 +1,11 @@
 <style>
 	/*Activity module*/
+  @media screen and (max-width: 675px) {
+      .activity {
+          width: 300px;
+      }
+  }
+
   .jumbotron {
     padding: 0;
     min-height: 500px;
@@ -10,8 +16,9 @@
     position: relative;
     top: 45px;
     margin: 0 auto;
-    width: 450px;
+    width: 650px;
     min-height: 500px;
+    max-height: 600px;
     background-color: white;
     border: 1px solid #ddd;
     box-shadow: 1px 1px 1px #eee;
@@ -36,6 +43,7 @@
   /*TODO: Fix adjusting section container*/
   .activity section {
   	height: 90%;
+    max-height: 375px;
   	overflow: hidden;
   	margin-bottom: 0;
     padding: 10px;
@@ -44,11 +52,20 @@
 
   .activity section p {
   	overflow: scroll;
-  	/*height: 100%;*/
+  	height: 100%;
+    width: 100%;
   	font-family: 'Open Sans Condensed', sans-serif;
   	font-size: 100%;
   	margin: 10px;
     padding: 10px;
+  }
+
+  .activity section .thumbnail {
+    height: 90%;
+    width: 100%;
+    max-height: 365px;
+    overflow: scroll;
+    position: relative;
   }
 
   .activity section .likeContainer {
