--- a/app/assets/javascripts/backbone/templates/activities/settings.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/settings.jst.ejs
@@ -1,6 +1,6 @@
-<div class="settingsHead">
+<!-- <div class="settingsHead">
   <h1> User Settings </h1>
-</div>
+</div> -->
 
 
 <!-- <div class="jumbotron">
