styled home page and fixed time bug

--- a/app/assets/javascripts/backbone/templates/activities/home.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/home.jst.ejs
@@ -2,7 +2,7 @@
 
 <div class="home-wrapper animated bounceIn">
 	<header>
-		<h3> Welcome Home <%= name %></h3>
+		<h3> Welcome Home,  <%= name %>!</h3>
 	</header>
 	<div class="subtitle">
 		<h3> How much time do you have?</h3>
@@ -13,17 +13,16 @@
 			<button class='go-btn'>GO</button>
 		</div>
 	</section>
-</div>
- <div class='interestContainer'>
- 	<header> 
- 		<h4 id='interestsTitle' style='color: #1abc9c;'> Interest List </h4> 
- 	</header>
-	<ul>
-	<% _.each(interests, function(interest, i) { %> 
-		<li>
-			<input type=checkbox name= "<%= interest%>"  id="interest-<%= i%>" checked >
-			<%= interest %>
-		</li>
-	<% }); %>
-	</ul>
+	<div class="interest-wrapper">
+	 	<h4> Toggle Interests </h4> 
+		<ul>
+		<% _.each(interests, function(interest, i) { %> 
+			<li>
+				<input type=checkbox name= "<%= interest%>"  id="interest-<%= i%>" checked >
+				<P> <%= interest %> </p>
+			</li>
+		<% }); %>
+		</ul>
+	</div>
+
 </div>
