--- a/app/assets/stylesheets/interests.scss
+++ b/app/assets/stylesheets/interests.scss
@@ -14,6 +14,7 @@ $containerHeaderColor: rgb(31, 137, 229);
   }
 
   .interest-wrapper  h4 {
+  	text-align: center;
 	margin: 0;
 	font-size: 22px;
 	color: black;
@@ -43,5 +44,21 @@ $containerHeaderColor: rgb(31, 137, 229);
 
   .interest-wrapper p {
 	font-size: 16px
+}
+
+
+@media (max-width: 800px) {
+  .home-wrapper {
+  	width: 300px; 
+  	height: 1200px;
+  }
+
+  .interest-wrapper li {
+  	width: 100%;
+  }
+
+  .interest-wrapper {
+  	width: 300px;
+  }
 }
 
