added video stuff

--- a/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
@@ -146,7 +146,7 @@
     <div class="thumbnail">
       <!-- <img src="..." alt="..."> -->
       <div class="caption">
-        <p><%= content %></p>
+        <div id="content"><%= content %></div>
       </div>
     </div>
   </section>
@@ -163,27 +163,3 @@
       </div>
   </footer>
 </div>
-
-
-
-
-<!-- 
-<div class="activity">
-	<header>
-		
-	</header> 
-	<section id="content">
-		<p><%= content %></p>
-		<div class="likeContainer">
-			<div id="likes">Likes: <a id="like-count"><%= likes %></a></div>
-			<div id="dislikes">Disikes: <a id="dislike-count"><%= dislikes %></a></div>
-			<button class='like-btn'>Like</button>
-			<button class='dislike-btn'>Dislike</button><br>	
-		</div>
-	</section>
-
-	<footer>
-		<a id="link" href='<%= link %>' target="_blank"> Link </a>
-		<a href='tempo#<%= backLink %>'> Back </a>
-	</footer>
-</div> -->
