settings page responsive

--- a/app/assets/javascripts/backbone/templates/activities/settings.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/settings.jst.ejs
@@ -1,7 +1,8 @@
-<!-- <div class="settingsHead">
+<div class="settingsHead">
   <h1> User Settings </h1>
-</div> -->
+</div>
 
+<!-- <h1 style="text-align: center;"> User Settings </h1> -->
 
 <!-- <div class="jumbotron">
   <div class="container settingsContainer">
