--- a/app/assets/stylesheets/settings.scss
+++ b/app/assets/stylesheets/settings.scss
@@ -1,16 +1,23 @@
+
 .page-header {
 	text-align: center;
 }
 
 .settingsHead {
 	width: 100%;
-    height: 120px;
+    height: 100px;
     margin-top: -13px;
-    background-image: radial-gradient(50% 50%, rgb(255, 120, 10), rgb(189, 85, 0));
+    /*background-image: radial-gradient(50% 50%, rgb(255, 120, 10), rgb(189, 85, 0));*/
+    background-color: rgb(255, 255, 255);
+    /*background-color: #ecf0f1;*/
   	padding: 30px;
+    border-bottom: 1px solid #cbdcde;
+
   	h1 {
   		text-align: center;
-  		color: white;
+  		/*color: white;*/
+        margin: 0;
+        color: rgb(40, 68, 92);
   	}
 }
 
@@ -145,7 +152,7 @@ a:hover {
 
 .settingsModule button {
     width: 90%;
-    border-radius: 25px;
+    border-radius: 10px;
     /*margin-top: -10px;*/
     position: relative;
     bottom: 0;
@@ -224,7 +231,7 @@ a:hover {
 
 .settingInterests td {
 	font-family: 'Open Sans Condensed', sans-serif;
-	font-size: 110%;
+	font-size: 20px;
 }
 
 .settingInterests td input {
@@ -243,20 +250,8 @@ a:hover {
 }
 
 .settingInterests #submit-interests {
-/*	width: 300px;
-	height: 35px;
-	display: block;
-	position: relative;
-	margin: 0 auto;
-	margin-bottom: 15px;
-	background-color: #3498db;
-	border: 1px solid #3498db;
-	border-radius: 3px;
-	color: white;
-	font-size: 15px;*/
     width: 100%;
-    border-radius: 25px;
-    /*margin-top: 20px;*/
+    border-radius: 10px;
     position: relative;
     /*bottom: 0;	*/
     bottom: 7px;
@@ -351,3 +346,27 @@ a:hover {
   } 
 
 */
+
+
+
+@media (max-width: 875px) {
+  body {
+    background-color: black;
+    background: black;
+  }
+
+  .settingsCol1 {
+    width: 100%;
+    display: block;
+    float: none;
+    height: 70%;
+  }
+
+  .settingsCol2 {
+    width: 100%;
+    height: 70%;
+    display: block;
+    float: none;
+
+  }
+}
