--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,7 +33,7 @@ $buttonFontColor: #ECF0F1;
     background-color: #edf0f2;
     padding: 0px;
     margin: 0;
-    font-family: 'Open Sans Condensed', sans-serif;
+    font-family: sans-serif;
     /*font-family: "Avenir", "Lato", Arial, Helvetica, sans-serif;*/
     font-size: 120%;
   }
