added small margin for history container

--- a/app/assets/stylesheets/history.scss
+++ b/app/assets/stylesheets/history.scss
@@ -23,6 +23,7 @@ $greenText: rgb(104, 187, 108);
     border-bottom-left-radius: 2px;  
     float: left;
     margin-left: 4%;
+    margin-bottom: 20px;
     margin-right: 2%;
     min-width: 300px;
 
