history bug fix

--- a/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
@@ -159,7 +159,7 @@
       <button class='btn btn-default dislike-btn' role="button">Dislike</button><br>  
       <div class="linkContainer">
         <a id="link" href='<%= link %>' target="_blank"> Link </a>
-        <a href='tempo#activities' id='back'> Back </a>     
+        <a href='<%= backLink %>' id='back'> Back </a>     
       </div>
   </footer>
 </div>
